# chino-os

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings-template.json  Chino.sln  Directory.Packages.props  LICENSE  README-zh.md  README.md  appveyor.yml  azure-pipelines.yml  build.sh  conanfile-win32.txt  conanfile.py  conanfile.txt
src/: .clang-format  CMakeLists.txt  default.lds
src/api/: CMakeLists.txt
src/api/include/chino/: chinodef.h  error.h  handle.h  io.h  kernel.h  list.h  memory.h  memory_pool.h  object.h  result.h  string.h  threading.h  utility.h
src/apis/: CMakeLists.txt
src/apis/libjs/: CMakeLists.txt  jsi.h
src/bootloader/: CMakeLists.txt  acpi.c  bootloader.c  bootloader.cpp
src/bootloader/generic/pc/: bootloader.c
src/bootloader/pc/: bootloader.S  bootloader.c
src/components/: CMakeLists.txt
src/components/basic/: .gitignore  CMakeLists.txt  LICENSE  Makefile.xmega  README.md  test
src/components/basic/examples/: FORY.bas  autolist  circle.bas  data.bas  data_array.bas  data_numeric.bas  data_test.bas  diamond.bas  dim.bas  expr.bas  for.bas  for_colon.bas  get.bas  gosub.bas  goto.bas  if.bas  if_and_or.bas  if_goto.bas  input.bas  left.bas  math.bas  mid.bas  nested_for.bas  on_goto.bas  right.bas  sine_wave.bas  sleep.bas  strings.bas  test_for.bas  the_first_basic_program.bas  toss_a_coin.bas  var.bas
src/components/basic/include/: arch.h  array.h  callback.h  dictionary.h  error.h  hexdump.h  io.h  kbhit.h  lines.h  parser.h  tokenizer.h  variables.h
src/components/basic/src/: array.c  dictionary.c  hexdump.c  io.c  lines.c  parser.c  tokenizer.c  variables.c
src/components/basic/t/: main.c  test.h  test_dictionary.c  test_lines.c
src/components/lua/: CMakeLists.txt
src/components/lua/lua/: lapi.c  lapi.h  lauxlib.c  lauxlib.h  lbaselib.c  lbitlib.c  lcode.c  lcode.h  lcorolib.c  lctype.c  ldblib.c  ldebug.c  ldebug.h  ldo.c  ldo.h  ldump.c  lfunc.c  lfunc.h  lgc.c  lgc.h  linit.c  liolib.c  llex.c  llex.h  llimits.h  lmathlib.c  lmem.c  lmem.h  loadlib.c  lobject.c  lobject.h  lopcodes.c  lopcodes.h  loslib.c  lparser.c  lparser.h  lstate.c  lstate.h  lstring.c  lstring.h  (+17 more)
src/components/python/: CMakeLists.txt
src/components/python/py/: argcheck.c  asmarm.c  asmarm.h  asmbase.c  asmbase.h  asmthumb.c  asmthumb.h  asmx64.c  asmx64.h  asmx86.c  asmx86.h  asmxtensa.c  asmxtensa.h  bc.c  bc.h  bc0.h  binary.c  builtinevex.c  builtinhelp.c  builtinimport.c  compile.c  compile.h  dynruntime.h  emit.h  emitbc.c  emitcommon.c  emitglue.c  emitglue.h  emitinlinethumb.c  emitinlinextensa.c  emitnative.c  emitnxtensa.c  formatfloat.c  frozenmod.c  gc.c  gc.h  grammar.h  lexer.c  malloc.c  map.c  (+102 more)
src/components/readline/: CMakeLists.txt
src/components/readline/microrl/: CMakeLists.txt
src/components/shell/: CMakeLists.txt  shell.cpp
src/components/shell/nr/: CMakeLists.txt
src/crts/: CMakeLists.txt
src/ddk/: CMakeLists.txt
src/ddk/include/chino/: chino_config.h.in  directory.h  io.h  kernel.h  list.h  object.h  slist.h
src/drivers/: CMakeLists.txt  Module.cs  driverdef.csproj  dummy.cpp
src/drivers/bus/: CMakeLists.txt
src/drivers/bus/simple-bus/: simple-bus.cpp
src/drivers/console/: CMakeLists.txt
src/drivers/console/serial-console/: CMakeLists.txt  serial-console.cpp
src/drivers/fs/: CMakeLists.txt
src/drivers/fs/win32-fs/: CMakeLists.txt  Win32FSDriver.cs  win32-fs.cpp
src/drivers/netif/: CMakeLists.txt
src/drivers/netif/win32-netif/: CMakeLists.txt  Win32NetIfDriver.cs  win32-netif.cpp  win32-netif.inl.razor
src/drivers/serial/: CMakeLists.txt
src/hal/: CMakeLists.txt
src/kernel/: CMakeLists.txt  acpi.h  entry.cpp  kdebug.hpp  kernel_iface.h  kernel_iface.hpp  utils.cpp  utils.hpp
src/kernel/audio/: AudioDefs.hpp
src/kernel/device/: Async.cpp  Async.hpp  Device.cpp  Device.hpp  DeviceManager.cpp  DeviceManager.hpp  Driver.cpp  Driver.hpp
src/kernel/diagnostic/: KernelLogger.cpp  KernelLogger.hpp
src/kernel/file/: FileManager.cpp  FileManager.hpp
src/kernel/glue/: crt_startup.c  malloc.cpp  syscalls.cpp
src/kernel/graphics/: DeviceContext.cpp  DeviceContext.hpp  GfxDefs.hpp  GraphicsEngine.hpp
src/kernel/memory/: MemoryManager.cpp  MemoryManager.hpp
src/kernel/network/: NetDefs.cpp  NetDefs.hpp  NetworkManager.cpp  NetworkManager.hpp  Socket.cpp  Socket.hpp  lwipglue.cpp
src/kernel/object/: Directory.cpp  Directory.hpp  Object.cpp  Object.hpp  ObjectManager.cpp  ObjectManager.hpp
src/kernel/src/: entry.cpp
src/kernel/system/: Startup.cpp  Startup.hpp
src/kernel/thread/: ProcessManager.cpp  ProcessManager.hpp
src/kernel/threading/: Mailslot.cpp  Mailslot.hpp  ProcessManager.cpp  ProcessManager.hpp  ThreadSynchronizer.cpp  ThreadSynchronizer.hpp  timer.h
src/kernel/uefigfx/: BootFont.hpp  BootVideo.cpp  BootVideo.hpp  GlyphProvider.cpp  GlyphProvider.hpp
src/kernel/utility/: BufferList.hpp
src/libarch/: CMakeLists.txt  arch.h
src/libarch/cortex-m3/: arch_defines.h  thread.S  thread.cpp
src/libarch/esp32/: thread.S
src/libarch/nios2/: thread.cpp
src/libarch/win-x86_64/: arch_defines.h  thread.cpp
src/libarch/x86_64/: arch_defines.h  io.S  thread.S  thread.cpp
src/libbsp/: CMakeLists.txt  bsp.hpp
src/libbsp/pc/: Boot.S  Boot.cpp  bsp_defines.hpp
src/libbsp/stm32f103/: Boot.S  Boot.c
src/libbsp/stm32f103rc/: Boot.c
src/libchino/: chino.h
src/libdriver/: CMakeLists.txt
src/libdriver/acpi/: Acpi.cpp  Acpi.hpp  CMakeLists.txt
src/libdriver/devicetree/: CMakeLists.txt  Fdt.cpp  Fdt.hpp  FdtRoot.cpp
src/libdriver/sdio/: DummySdioRoot.cpp  SdioRoot.cpp
src/net/: CMakeLists.txt
src/os/: CMakeLists.txt
src/os/boot/: CMakeLists.txt
src/os/drivers/: CMakeLists.txt  Chino.Drivers.csproj  inc_drivers.cmake.razor
src/os/hal/: CMakeLists.txt
src/os/kernel/: CMakeLists.txt  dummy.cpp  kernel.cpp  object_pool.cpp
src/portable/: CMakeLists.txt  portable.h
src/portable/x86_64/: port_defines.h  thread.S  thread.cpp
src/portable/x86_x64/: bootloader.S
src/shell/: CMakeLists.txt
(+672 files in other folders)
