# definitions in macros
MESSAGE("ARCH=${ARCH}")
ADD_DEFINITIONS(-DGNU_EFI_USE_MS_ABI -D_ARCH_=${ARCH} -D_BOARD_=${BOARD})

INCLUDE(${BOARD_CMAKE_DIR}/components.cmake)

# Add subproject
ADD_SUBDIRECTORY(libarch)
ADD_SUBDIRECTORY(libbsp)
IF(${HAS_BOOTLOADER})
	ADD_SUBDIRECTORY(bootloader)
ENDIF()
ADD_SUBDIRECTORY(kernel)
ADD_SUBDIRECTORY(apis)
