INCLUDE(${BOARD_CMAKE_DIR}/toolchain.cmake)
INCLUDE(${BOARD_CMAKE_DIR}/libarch.cmake)

SET(CMAKE_C_FLAGS "${COMMON_C_FLAGS} ${BOARD_C_FLAGS}")
SET(CMAKE_CXX_FLAGS "${COMMON_CXX_FLAGS} ${BOARD_CXX_FLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS "${LDFLAGS} ${BOARD_LDFLAGS}")

# - Add user project to CMake project
INCLUDE_DIRECTORIES(${GNU_EFI_INC} ${GNU_EFI_INC}/${ARCH} ${COMMON_INC})

FILE(GLOB_RECURSE ARCH_SRC "${ARCH}/*.c" "${ARCH}/*.cpp")
FILE(GLOB_RECURSE ARCH_SRC_ASM "${ARCH}/*.S")

SET_PROPERTY(SOURCE ${ARCH_SRC_ASM} PROPERTY LANGUAGE C)
SET_SOURCE_FILES_PROPERTIES(${ARCH_SRC_ASM} PROPERTIES COMPILE_FLAGS "${COMMON_ASM_FLAGS}")

ADD_LIBRARY(arch STATIC ${ARCH_SRC} ${ARCH_SRC_ASM})

TARGET_LINK_LIBRARIES(arch)
SET_TARGET_PROPERTIES(arch PROPERTIES
							LINKER_LANGUAGE CXX)