INCLUDE(${BOARD_CMAKE_DIR}/toolchain.cmake)
INCLUDE(${BOARD_CMAKE_DIR}/libbsp.cmake)

SET(CMAKE_C_FLAGS "${COMMON_C_FLAGS} ${BOARD_C_FLAGS}")
SET(CMAKE_CXX_FLAGS "${COMMON_CXX_FLAGS} ${BOARD_CXX_FLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS "${LDFLAGS} ${BOARD_LDFLAGS}")

# - Add user project to CMake project
INCLUDE_DIRECTORIES(${GNU_EFI_INC} ${GNU_EFI_INC}/${ARCH} ${COMMON_INC})

FILE(GLOB_RECURSE BSP_SUB_SRC "${BOARD}/*.c" "${BOARD}/*.cpp")
FILE(GLOB_RECURSE BSP_SUB_SRC_ASM "${BOARD}/*.S")

LIST(APPEND BSP_SRC ${BSP_SUB_SRC})
LIST(APPEND BSP_SRC_ASM ${BSP_SUB_SRC_ASM})

SET_PROPERTY(SOURCE ${BSP_SRC_ASM} PROPERTY LANGUAGE C)
SET_SOURCE_FILES_PROPERTIES(${ARCH_SRC_ASM} PROPERTIES COMPILE_FLAGS "${COMMON_ASM_FLAGS}")

ADD_LIBRARY(bsp STATIC ${BSP_SRC} ${BSP_SRC_ASM})

TARGET_LINK_LIBRARIES(bsp ${BSP_LIBS})
SET_TARGET_PROPERTIES(bsp PROPERTIES
							LINKER_LANGUAGE CXX)
							
IF(BSP_DEPENDENCIES)
	ADD_DEPENDENCIES(bsp ${BSP_DEPENDENCIES})
ENDIF()
